refactor(dialog): 重构文件对话框实现并优化UI组件
- 将文件对话框改为异步实现避免阻塞渲染线程
- 添加 SaveFileDialog 和 ImportFileDialog 的共享实例管理
- 重构 FileDialogUtil 工具类支持异步操作模式
- 修复 LineToBlockSettingsDialog 和 ProjectionSettingsDialog 的单例初始化
- 优化 NewLayerDialog 的窗口尺寸自适应逻辑
- 改进 TextInputDialog 的跨线程安全打开机制
- 统一警告消息的显示方式并通过事件总线发布